# Agri-assistant-RAG

./: .gitignore  README.md  main.py  pyproject.toml  structure  test.py
data/csv/: farm_production.csv
data/vectorstore/: index.faiss  index.pkl
src/agents/: router.py
src/chains/: csv_analysis_chain.py  llm.py  prompt_loader.py  qa_chain.py  summary_chain.py  weather_analysis_chain.py
src/config/: app.yaml  config_loader.py
src/evaluation/: confidence.py  logger.py
src/loaders/: document_loader.py
src/parsers/: qa_response.py
src/processors/: splitter.py
src/prompts/: csv_analysis.yaml  qa_prompt.yaml  summary_prompt.yaml  weather_analysis.yaml
src/retrieval/: retrieval_service.py  retriever.py
src/services/: weather_service.py
src/tools/: csv_tool.py  weather_tool.py
src/vectorstore/: faiss_store.py
